python/cactus/bindings/cactus.py


_lib.cactus_graph_relu.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_relu.restype = ctypes.c_int
_lib.cactus_graph_silu.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_silu.restype = ctypes.c_int
_lib.cactus_graph_gelu.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_gelu.restype = ctypes.c_int
_lib.cactus_graph_gelu_erf.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_gelu_erf.restype = ctypes.c_int
_lib.cactus_graph_sigmoid.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_sigmoid.restype = ctypes.c_int
_lib.cactus_graph_tanh.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_tanh.restype = ctypes.c_int
_lib.cactus_graph_glu.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_glu.restype = ctypes.c_int
